continued backend development

--- a/css/styles.css
+++ b/css/styles.css
@@ -5,7 +5,43 @@
     Description:
         Purpose of the stylesheet follows.
 */
-
+#login_form{
+    width:300px;
+    background-color:#f0f0f0;
+    border: 1px solid white;
+    margin: 250px auto 0;
+    padding: 1em;
+    border-radius: 3px
+}
+input[type=text], input[type=password]{
+    display:block;
+    margin: 0 0 1em 0;
+    width:280px;
+    border: 5px;
+    border-radius: 1px;
+    padding: 1em;
+}
+.error{
+    color:#393939;
+    font-size: 15px;
+}
+fieldset{
+    width: 300px;
+    margin: auto;
+    margin-bottom: 2em;
+    display:block;
+}
+input[type=submit], form a{
+    border:none;
+    margin-right:1em;
+    padding:6px;
+    text-decoration: none;
+    font-size:12px;
+    border-radius: 4px;
+    background:#838383;
+    color:#ffffff;
+    -moz-box-shadow: 0 1px 0 white;
+}
 root { 
     display: block;
 }
