--- a/css/styles.css
+++ b/css/styles.css
@@ -25,7 +25,7 @@ input[type=text], input[type=password]{
     color:#393939;
     font-size: 15px;
 }
-fieldset{
+fieldset.login{
     width: 300px;
     margin: auto;
     margin-bottom: 2em;
