--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -4062,7 +4062,7 @@ input[type="submit"].btn.btn-mini {
 }
 
 .nav-tabs {
-  border-bottom: 1px solid #ddd;
+ 
 }
 
 .nav-tabs > li {
@@ -4070,26 +4070,28 @@ input[type="submit"].btn.btn-mini {
 }
 
 .nav-tabs > li > a {
-  padding-top: 8px;
-  padding-bottom: 8px;
+     color:#ffffff;
+    background-color:#ed2025;
+    padding: 15px 50px 15px 50px;
+    background-color: #000;
   line-height: 20px;
   border: 1px solid transparent;
-  -webkit-border-radius: 4px 4px 0 0;
-     -moz-border-radius: 4px 4px 0 0;
-          border-radius: 4px 4px 0 0;
+
 }
 
 .nav-tabs > li > a:hover,
 .nav-tabs > li > a:focus {
+background-color:#ED2025;
+color:#fff;
   border-color: #eeeeee #eeeeee #dddddd;
 }
 
 .nav-tabs > .active > a,
 .nav-tabs > .active > a:hover,
 .nav-tabs > .active > a:focus {
-  color: #555555;
+  color: #fff;
   cursor: default;
-  background-color: #ffffff;
+  background-color: #ED2025;
   border: 1px solid #ddd;
   border-bottom-color: transparent;
 }
